fix: open diffs button in chat editing widget is not visible in light theme (#231416)
* fix: open diffs button in chat editing widget is not visible in light theme

* fix: also use good background for Add Files button

--- a/src/vs/workbench/contrib/chat/browser/media/chat.css
+++ b/src/vs/workbench/contrib/chat/browser/media/chat.css
@@ -606,6 +606,7 @@ have to be updated for changes to the rules above, or to support more deeply nes
 .interactive-session .chat-editing-session .chat-editing-session-actions .monaco-button.secondary.codicon {
 	background-color: transparent;
 	border-color: transparent;
+	color: var(--vscode-foreground);
 	cursor: pointer;
 	height: 16px;
 	padding: 0px;
@@ -621,6 +622,11 @@ have to be updated for changes to the rules above, or to support more deeply nes
 .interactive-session .chat-editing-session .chat-editing-session-toolbar-actions .monaco-button.secondary:hover,
 .interactive-session .chat-editing-session .chat-editing-session-actions .monaco-button.secondary:hover {
 	background-color: var(--vscode-button-secondaryHoverBackground);
+}
+
+.interactive-session .chat-editing-session .chat-editing-session-actions .monaco-button.secondary.codicon:hover,
+.interactive-session .chat-editing-session .chat-editing-session-toolbar-actions .monaco-button.secondary:hover {
+	background-color: var(--vscode-toolbar-hoverBackground);
 }
 
 .interactive-session .chat-editing-session .chat-editing-session-toolbar-actions .monaco-button,
